--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-<<<<<<< HEAD
-<<<<<<< HEAD
 * {
   margin: 0;
   padding: 0;
@@ -13,12 +11,11 @@ html {
 body {
   min-height: 100vh;
   font-family: 'Roboto', 'Oxygen',
-=======
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
->>>>>>> de52a8c (Initialize project using Create React App)
-=======
+
 * {
   margin: 0;
   padding: 0;
@@ -32,17 +29,13 @@ html {
 body {
   min-height: 100vh;
   font-family: 'Roboto', 'Oxygen',
->>>>>>> ca1b8c6 (Day X: Added Props)
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
->>>>>>> ca1b8c6 (Day X: Added Props)
+
 .App {
   display: flex;
   flex-direction: column;
@@ -53,10 +46,9 @@ body {
   max-width: 500px;
   border: 1px solid mediumblue;
   margin: auto;
-<<<<<<< HEAD
 }
 
-header {
+.header {
   width: 100%;
   padding: 0 0.25em;
   background-color: mediumblue;
@@ -76,7 +68,7 @@ main {
   overflow-y: auto;
 }
 
-footer {
+.footer {
   width: 100%;
   padding: 0.25em;
   background-color: mediumblue;
@@ -84,13 +76,13 @@ footer {
   display: grid;
   place-content: center;
 }
-=======
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
->>>>>>> de52a8c (Initialize project using Create React App)
-=======
+
+
 }
 
 header {
@@ -179,4 +171,70 @@ ul li::before {
   color: red;
   outline: none;
 }
->>>>>>> ca1b8c6 (Day X: Added Props)
+
+.addForm {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  margin: 0.5rem 0 0;
+  padding: 0 0.5rem 0.25rem;
+  border-bottom: 1px solid #eee;
+}
+
+.addForm label {
+  position: absolute;
+  left: -99999px;
+}
+
+.addForm input[type='text'] {
+  flex-grow: 1;
+  max-width: calc(100% - 50px);
+  min-height: 48px;
+  font-size: 1rem;
+  padding: 0.25rem;
+  border-radius: 0.25rem;
+  margin-right: 0.25rem;
+  outline: none;
+}
+
+button {
+  height: 48px;
+  min-width: 48px;
+  border-radius: 0.25rem;
+  padding: 0.5rem;
+  font-size: 1rem;
+  background-color: aliceblue;
+  color: mediumblue;
+  cursor: pointer;
+}
+
+button:focus, 
+button:hover {
+  color: white;
+  background-color: limegreen;
+  outline: none;
+}
+
+.searchForm {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  margin: 0.25rem 0 0;
+  padding: 0 0.5rem 0.25rem;
+  border-bottom: 1px solid #eee;
+}
+
+.searchForm label {
+  position: absolute;
+  left: -99999px;
+}
+
+.searchForm input[type='text'] {
+  flex-grow: 1;
+  max-width: 100%;
+  min-height: 48px;
+  font-size: 1rem;
+  padding: 0.25rem;
+  border-radius: 0.25rem;
+  outline: none;
+}
